--- a/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/Base.lproj/Main.storyboard
@@ -99,12 +99,14 @@
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.666666666666664"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="P8n-D9-fUF" kind="unwind" identifier="ToPageVC" unwindAction="unwindFromListVCWithSender:" id="vr5-dH-jla"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aF5-Ea-ygm">
-                                <rect key="frame" x="0.0" y="831" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aF5-Ea-ygm">
+                                <rect key="frame" x="0.0" y="826" width="414" height="49"/>
                                 <items>
                                     <barButtonItem title="Edit" id="fRR-nR-T4h"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Yss-ee-y6e"/>
@@ -114,22 +116,33 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="aF5-Ea-ygm" firstAttribute="trailing" secondItem="P36-ch-h8s" secondAttribute="trailing" id="0ye-Y2-9ra"/>
+                            <constraint firstItem="aF5-Ea-ygm" firstAttribute="leading" secondItem="P36-ch-h8s" secondAttribute="leading" id="RnL-QZ-yFW"/>
                             <constraint firstItem="3X1-6e-77t" firstAttribute="trailing" secondItem="P36-ch-h8s" secondAttribute="trailing" id="XqL-Ul-JZc"/>
                             <constraint firstItem="3X1-6e-77t" firstAttribute="leading" secondItem="P36-ch-h8s" secondAttribute="leading" id="gcu-dV-FNF"/>
+                            <constraint firstAttribute="bottom" secondItem="aF5-Ea-ygm" secondAttribute="bottom" constant="21" id="hh9-1b-cHN"/>
                             <constraint firstItem="3X1-6e-77t" firstAttribute="bottom" secondItem="P36-ch-h8s" secondAttribute="bottom" constant="44" id="if5-hV-GZk"/>
                             <constraint firstItem="3X1-6e-77t" firstAttribute="top" secondItem="P36-ch-h8s" secondAttribute="top" id="zjx-js-omT"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="P36-ch-h8s"/>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="3X1-6e-77t" id="sWD-fR-3pE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WDp-Bi-001" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="P8n-D9-fUF" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="850.72463768115949" y="-225"/>
         </scene>
         <!--PageVC-->
         <scene sceneID="1wi-lX-pNo">
             <objects>
-                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Dy5-oi-WSZ" customClass="PageVC" customModule="WeatherGift" customModuleProvider="target" sceneMemberID="viewController"/>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Dy5-oi-WSZ" customClass="PageVC" customModule="WeatherGift" customModuleProvider="target" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="Ysk-Pu-zED" kind="presentation" identifier="ToListVC" id="Aey-sj-QRM"/>
+                    </connections>
+                </pageViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5PF-cA-3Z0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="54" y="-225"/>
