--- a/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/Base.lproj/Main.storyboard
@@ -108,7 +108,11 @@
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aF5-Ea-ygm">
                                 <rect key="frame" x="0.0" y="826" width="414" height="49"/>
                                 <items>
-                                    <barButtonItem title="Edit" id="fRR-nR-T4h"/>
+                                    <barButtonItem title="Edit" id="fRR-nR-T4h">
+                                        <connections>
+                                            <action selector="editBarButtonPressed:" destination="Ysk-Pu-zED" id="KZ9-xV-i9X"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Yss-ee-y6e"/>
                                     <barButtonItem systemItem="add" id="GJT-z4-gNz"/>
                                 </items>
@@ -127,6 +131,8 @@
                         <viewLayoutGuide key="safeArea" id="P36-ch-h8s"/>
                     </view>
                     <connections>
+                        <outlet property="addBarButton" destination="GJT-z4-gNz" id="nwb-hs-0Yq"/>
+                        <outlet property="editBarButton" destination="fRR-nR-T4h" id="jD0-4P-M4c"/>
                         <outlet property="tableView" destination="3X1-6e-77t" id="sWD-fR-3pE"/>
                     </connections>
                 </viewController>
