--- a/WeatherGift/Base.lproj/Main.storyboard
+++ b/WeatherGift/Base.lproj/Main.storyboard
@@ -114,7 +114,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Yss-ee-y6e"/>
-                                    <barButtonItem systemItem="add" id="GJT-z4-gNz"/>
+                                    <barButtonItem systemItem="add" id="GJT-z4-gNz">
+                                        <connections>
+                                            <action selector="addBarButtonPressed:" destination="Ysk-Pu-zED" id="tbD-Ky-yb0"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                         </subviews>
